# interview

./: .gitignore  cli.py  pyproject.toml  requirements.txt
backend/: agents.py  app.py  gen_templates.py  gen_templates_sample.py  interview.py  question_bank.py  voice_agent.py
backend/prompts/: airline_pilot_interviewer.txt  interviewee.txt  interviewer.txt  judge.txt
deploy/: Caddyfile  README.md  bootstrap.sh  deploy.sh
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  CheatsheetMode.jsx  PracticeQuestion.jsx  RandomMode.jsx  VoiceInterview.jsx  index.css
research/: answer_templates.json  answer_templates_sample.json  question_bank.txt
research/company/: airline_specific_gouges.txt
research/competency/: crm_wwyd_scenarios.txt  star_method_and_tmaat.txt
research/sample_interviews/: aviation_interviews_com_qbank.txt  full_qa_passmyinterview.txt  pilot_interview_guide_book.txt
research/technical/: flightdeckfriend_technical_articles.txt  technical_questions_and_answers.txt
research/youtube/: 6rXGy-_K7ek_Mastering the Pilot Interview： Mistakes to Avoid & Inside Ti.en.txt  6rXGy-_K7ek_Mastering the Pilot Interview： Mistakes to Avoid & Inside Ti.en.vtt  7TPd3AZXIYU_Airline Pilot Interview Coming Up？ Here’s How to Prepare t.en.txt  7TPd3AZXIYU_Airline Pilot Interview Coming Up？ Here’s How to Prepare t.en.vtt  DsfUqP7etAk_Mastering Tell Me About a Time Interview Questions ｜ TMAAT +.en.txt  DsfUqP7etAk_Mastering Tell Me About a Time Interview Questions ｜ TMAAT +.en.vtt  dwqsIYqRFk4_How to pass the airline interview..en.txt  (+21 more)
